...
                  child: Center(
                    child: GestureDetector(
                      onTap: () {
                        context.push('/signin');
                      },
                      child: Text(
                        'I already have an account',
                        style: TextStyle(
                          fontSize: isTablet ? 18 : 14,
                          fontWeight: FontWeight.w500,
                          color: const Color(0xFF1A73E8),
                        ),
                      ),
...
